# depictio

./: .bumpversion.cfg  .devcontainer.json  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  AUTO_THEME_DETECTION.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMPLETE_IMPLEMENTATION.md  DASHBOARD_JSON_SCHEMA_ANALYSIS.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INITIALIZATION_FIX_SUMMARY.md  INITIALIZATION_RACE_CONDITION_FIX.md  JOIN_ERROR_FIX.md  K8S_PERFORMANCE_OPTIMIZATIONS.md  LICENSE  MVP_YAML_FIX_SUMMARY.md  PLAN_JBROWSE2_MVP.md  QUICK_DECISION_GUIDE.md  README.md  README_UI_TESTING.md  SIMPLE_JSON_POC.py  SIMPLIFIED_YAML_JSON_PROPOSAL.md  TABLE_COMPONENT_FIX.md  TODO.md  VERSION  WORKTREE_WORKFLOW.md  YAML_DEPRECATION_SUMMARY.md  YAML_MONGODB_ANALYSIS.md  __init__.py  (+38 more)
.claude/: GENERATOR-PROMPT.md  GETTING-STARTED.md  README.md  mcp.json  settings.json  settings.local.json
.devcontainer/: .gitignore  CODESPACES.md  Dockerfile  Dockerfile_depictio.dockerfile  QUICKSTART-AI-TOOLS.md  README-AI-TOOLS.md  README-hooks.md  README.md  check_binaries.sh  cleanup-containers.sh  devcontainer.json  docker-compose.codespaces.yaml  docker-compose.devcontainer.yaml  docker-compose.git-mount.yaml  docker-compose.yaml  fix_git_worktree.sh  init  post-create.sh  post_create_setup.sh  pre_create_setup.sh  setup_credentials.sh  show_status.sh
.github/: ROADMAP_ISSUES_DRAFT.md  dependabot.yml  pull_request_template.md
.nfcore-monitor/: ampliseq-2.17.0.md  ampliseq-2.18.0.md
CLI_client/: CLI_config.yaml  cli.py  cli_auth.py
bak/: app_dropdown.py  config_mongodb.txt  dash_app.py  dashboard_app.py  main.py  parser.py
conda_envs/: backend.yaml  depictio.yaml  depictio_backend.yaml  depictio_cli.yaml  depictio_frontend.yaml  frontend.yaml
cytoscape_cola_test/: app.py
depictio/: __init__.py  version.py
depictio-cli/: depictio_json_schema.json  dev.py  setup.py
depictio/cli/: CLI_REVIEW.md  README.md  __init__.py  __main__.py  cli_logging.py  depictio_cli.py  logging.py  pyproject.toml  setup.py  test_cli_install.py
depictio/cli/cli/commands/: backup.py  catalog.py  config.py  dashboard.py  data.py  dev.py  images.py  migrate.py  recipe.py  run.py  standalone.py  template.py
depictio/cli/cli/utils/: CLAUDE.md  __init__.py  api_calls.py  backup_validation.py  common.py  config.py  deltatables.py  file_utils.py  helpers.py  jbrowse2_processor.py  joins.py  links.py  multiqc_processor.py  process.py  rich_utils.py  s3.py  sample_mapping.py  scan.py  scan_utils.py  template_validator.py  templates.py
depictio/cli/configs/nextflow/: depictio.config
depictio/cli/configs/nextflow/example/: README.md  depictio_project.yaml  main.nf  nextflow.config
depictio/cli/configs/nf-core/rnaseq/: depictio_project.yaml
dev/: TEMPLATE_SYSTEM_IMPLEMENTATION_PLAN.md  benchmark_baseline_with_perf.txt  benchmark_baseline_with_perf_alldashboards.txt  benchmark_render.py  depictio_example_project.py  dmc_select_debug.py  dump_catalog_payload.py  regenerate_dashboard_thumbnails.py  test_customizations.py  test_mongo.py  test_realtime_events.py
dev/bioinformatics-modules/: DESIGN.md  app.py  pyproject.toml  shared_data.py  shared_stores.py
dev/bioinformatics-modules/modules/: __init__.py
dev/bioinformatics-modules/modules/contrast_manager/: callbacks.py  layout.py
dev/bioinformatics-modules/modules/dimred_explorer/: callbacks.py  layout.py
dev/bioinformatics-modules/modules/enrichment_explorer/: __init__.py  callbacks.py  layout.py
dev/bioinformatics-modules/modules/feature_explorer/: callbacks.py  layout.py
dev/bioinformatics-modules/modules/peak_explorer/: callbacks.py  layout.py
dev/bioinformatics-modules/modules/progressive_filter/: callbacks.py  layout.py
dev/bioinformatics-modules/modules/taxonomy_browser/: callbacks.py  layout.py
dev/bioinformatics-modules/modules/variant_inspector/: __init__.py  callbacks.py  layout.py
dev/component-export-endpoint/: .gitignore  export_components_demo.ipynb  export_to_html.py  pyproject.toml
dev/conditional-highlighting/: CALLBACKS_REPORT.md  app.py  callbacks.py  data.py  layout.py  pyproject.toml
dev/conditional-highlighting/assets/: custom.css
dev/dimred-explorer/: app.py  callbacks.py  data.py  layout.py  pyproject.toml
dev/hic-contact-map/: .gitignore  README.md  app.py  hic_data.py  hic_figure.py  pyproject.toml
dev/litellm-prototype/: .env.example  README.md  app.py  llm_client.py  pyproject.toml  requirements.txt  sample_data.py  schemas.py
dev/litellm-prototype/assets/: step_filter.js
dev/litellm-prototype/components/: __init__.py  ai_panel.py  cards.py  figures.py  interactive.py  tables.py
dev/multiqc-multi-reports/: generate_multi_run_reports.py  pyproject.toml
dev/phylogenetic-trees/: README.md  auspice_to_newick.py  download_nfcore_trees.sh  prototype_combined.py  prototype_cytoscape.py  prototype_phylocanvas.py  prototype_plotly.py  pyproject.toml  tree_utils.py
dev/phylogenetic-trees/data/: mammal_metadata.csv  sample_metadata.csv  sample_tree.nwk
dev/progressive-filter/: app.py  callbacks.py  data.py  layout.py  pyproject.toml
dev_add_remove_plot/: dev_add_remove_plot_simple.py  dev_dbc_simple.py
dev_aggrid/: app.py
dev_celery/: main.py
dev_design_visu/: dev_design_visu.py  dev_dyanamic_fields.py
dev_draggable/: dev_draggable_advanced.py  dev_draggable_lite.py  dev_edit_remove.py  example_website_dynamic_id.py  example_website_dynamic_id_slider.py  example_website_dynamic_id_slider_modal_save.py  layout.json  test_draggable.py
dev_dynamic_id/: dev_dynamic_id.py
dev_execute_code/: app.py
dev_general/: dev.ipynb  parse_json.py  pymongo_dev.py
dev_modal/: dev_modal.py
dev_modal_x_draggable/: children.json  children2.json  dev_draggable_edit_remove.py  dev_draggable_modal_slider.py  dev_modal_x_draggable.py  layout.json  layout2.json  test.py
dev_wf_selector/: app.py
docker-compose/: .env  .envo  docker-compose.backup-minio.yaml  docker-compose.bak.yaml  (+5 more)
(+2250 files in other folders)
