[project]
name = "depictio"
version = "0.7.3"
description = "Depictio API & Frontend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  # Core dependencies
  "bcrypt==4.2.1",
  "bleach==6.2.0",
  "beanie==2.0.0",
  "boto3==1.36.21",
  "celery==5.5.3",
  "cryptography==45.0.2",
  "colorlog==6.9.0",
  # Dash and visualization
  "dash-ace==0.2.1",
  "dash-bootstrap-components==1.7.1",
  "dash-cytoscape==1.0.2",
  "dash-extensions==1.0.1",
  "dash-iconify==0.1.2",
  "dash-mantine-components==2.1.0",
  "dash[async]==3.2.0",
  "dash-ag-grid==31.3.1",
  "dash-dynamic-grid-layout==0.1.3",
  "dash-dock==0.0.1",
  "plotly-express==0.4.1",
  # Data processing
  "deltalake==0.24.0",
  "fastparquet==2024.11.0",
  "numpy==2.2.3",
  "orjson==3.11.5",
  "pandas==2.2.3",
  "polars-lts-cpu[numpy,pandas,pyarrow,excel,deltalake]==1.19.0",
  # API and web
  "devtools==0.12.2",
  "diskcache==5.6.3",
  "fastapi==0.115.8",
  "flask-caching==2.0.2",
  "gunicorn==23.0.0",
  "httpx==0.28.1",
  "uvicorn==0.34.0",
  "websockets>=12.0",  # WebSocket support for uvicorn
  # Database
  "motor==3.7.1",
  "pymongo==4.13.0",
  # Authentication and security
  "pydantic[email]==2.10.6",
  "pydantic-settings==2.7.1",
  "pyjwt==2.10.1",
  "python-jose==3.3.0",
  "python-multipart==0.0.20",
  "restrictedpython==8.0",
  # Playwright for screenshots (pure Python - installs its own browsers)
  "playwright==1.52.0",
  "pytest-playwright==0.7.0",
  # Utilities
  "multiqc==1.31.0",
  "mypy-boto3-s3==1.38.0",
  "psutil==7.0.0",
  "python-dotenv==1.1.0",
  "pyyaml>=6.0.2",
  "redis==5.2.1",
  "tomli==2.2.1",
  "types-requests==2.32.4.20250611",
  "umap-learn==0.5.9.post2",
  # Storage
  "s3fs==2025.12.0",
  "fsspec==2025.12.0",
  # CLI utilities (required by API code that imports CLI helpers)
  "typer==0.16.0",
  "rich==14.2.0",
]
authors = [{ name = "Thomas Weber", email = "thomas.weber@embl.de" }]
urls = { Homepage = "http://github.com/depictio/depictio" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "bandit==1.8.5",
  "black==25.1.0",
  "ruff==0.12.1",
  "ty==0.0.1-alpha.12",
  "pre-commit==4.2.0",
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
  "pytest-cov==6.2.1",
  "pytest-xdist==3.7.0",
  "mongomock==4.3.0",
  "mongomock-motor==0.0.36",
  "bump2version==1.0.1",
  "testcontainers[minio]==4.10.0",
  "types-bleach==6.2.0.20250514",
  "types-boto3==1.38.46",
  "textual==7.0.1",
]
# CLI-specific dependencies
cli = [
  "typer==0.16.0",
  "rich==14.2.0",
]


[project.scripts]
depictio-api = "depictio.api.run:main"
depictio-dash = "depictio.dash.app:main"
depictio = "depictio.cli.depictio_cli:main"


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["depictio"]

# [tool.mypy]
# exclude = ["build/", "depictio/api/", "depictio/dash/"]
# files = ["depictio/tests/", "depictio/models/", "depictio/cli/"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"] # Enable import sorting (I rules) - restored original
ignore = ["E501"]        # Ignore all line length errors

[tool.ruff.lint.isort]
known-first-party = ["depictio"]


[tool.mypy]
# Basic settings
python_version = "3.11"             # Adjust to your Python version
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = false

# Display settings - simpler output
show_error_context = false
show_column_numbers = true
error_summary = true
pretty = true

# Permissive settings
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = false
warn_no_return = false
warn_unreachable = false

# Per-module settings - only check specific directories
[[tool.mypy.overrides]]
module = ["depictio.models.*", "depictio.cli.*"]
check_untyped_defs = true


[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = [
  "depictio/tests/api",
  "depictio/tests/models",
  "depictio/tests/cli",
  "depictio/tests/dash",
]
markers = [
  "no_db: mark test to skip database setup",
  "integration: mark test as an integration test.",
  "playwright: mark test as a playwright test.",
  "docker: mark test as requiring docker.",
]
addopts = "-s"
filterwarnings = [
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
  "ignore::DeprecationWarning:pydantic.*",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
