[project]
name = "depictio"
version = "1.0.0"
description = "Depictio — FastAPI backend + Celery worker for the React viewer SPA"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  # Core dependencies
  "bcrypt==5.0.0",
  "bleach==6.4.0",
  # Held at 2.0.0: beanie 2.1.0 calls list_collection_names(authorizedCollections=
  # True) during init, which the latest mongomock (4.3.0) test double doesn't
  # accept, breaking the unit suite. Bump once mongomock supports the kwarg.
  "beanie==2.0.0",
  # Capped at 1.43.0: s3fs 2026.4.0 -> aiobotocore caps botocore<1.43.1, so this
  # is the highest boto3 compatible with the pinned s3fs/aiobotocore chain.
  "boto3==1.43.0",
  "celery==5.6.3",
  "cloudpickle==3.1.2",
  "cryptography==48.0.0",
  "colorlog==6.10.1",
  # Visualization
  "plotly-express==0.4.1",
  "plotly-complexheatmap",
  "plotly-upset",
  # Data processing
  "deltalake==1.6.0",
  "fastparquet==2026.5.0",
  "numpy==2.4.6",
  "orjson==3.11.9",
  "pandas==3.0.3",
  # polars-lts-cpu is legacy; the modern LTS/older-CPU build is polars[rtcompat]
  # (-> polars-runtime-compat). rtcompat also matches multiqc 1.35's requirement.
  "polars[rtcompat,numpy,pandas,pyarrow,excel,deltalake]==1.41.2",
  # API and web
  "devtools==0.12.2",
  "diskcache==5.6.3",
  "fastapi==0.136.3",
  "gunicorn==26.0.0",
  "httpx==0.28.1",
  "uvicorn==0.49.0",
  "websockets==16.0",
  # Database
  "motor==3.7.1",
  "pymongo==4.17.0",
  # Authentication and security
  "pydantic[email]==2.13.4",
  "pydantic-settings==2.14.1",
  "pyjwt==2.13.0",
  "python-jose==3.5.0",
  "python-multipart==0.0.32",
  "restrictedpython==8.2",
  # Playwright for screenshots (pure Python - installs its own browsers)
  "playwright==1.60.0",
  # Utilities
  "multiqc==1.35",
  "mypy-boto3-s3==1.43.14",
  "psutil==7.2.2",
  "python-dotenv==1.2.2",
  "pyyaml>=6.0.2",
  # Held at 5.2.1 (main's pin): redis-py 8.0 regressed the real-time pub/sub
  # event listener (connection_manager) — it starves the API event loop, so
  # internal HTTP self-calls time out and reference-dataset ingestion never
  # writes deltatables. Bisecting via CI; bump again once that's resolved.
  "redis==5.2.1",
  "tomli==2.2.1",
  "types-requests==2.33.0.20260518",
  "umap-learn==0.5.12",
  # Storage
  "s3fs==2026.4.0",
  "fsspec==2026.4.0",
  # CLI utilities (required by API code that imports CLI helpers)
  "typer==0.26.7",
  "rich==15.0.0",
  # Dev-only file watcher for live-reloading the Celery worker. run_celery_worker.sh
  # wraps celery in `watchmedo auto-restart` when DEPICTIO_DEV_MODE=true; in prod
  # it's installed (~1 MB) but never invoked. Celery has no built-in reloader.
  "watchdog==6.0.0",
]
authors = [{ name = "Thomas Weber", email = "thomas.weber@embl.de" }]
urls = { Homepage = "http://github.com/depictio/depictio" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "bandit==1.9.4",
  "ruff==0.15.16",
  "ty==0.0.46",
  "pre-commit==4.6.0",
  "pytest==9.0.3",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "pytest-xdist==3.8.0",
  "mongomock==4.3.0",
  "mongomock-motor==0.0.36",
  "bump2version==1.0.1",
  "testcontainers[minio]==4.14.2",
  "types-bleach==6.4.0.20260607",
  "types-boto3==1.43.25",
]


[project.scripts]
depictio-api = "depictio.api.run:main"
depictio = "depictio.cli.depictio_cli:main"


[tool.uv.sources]
plotly-complexheatmap = { path = "packages/plotly-complexheatmap", editable = true }
plotly-upset = { path = "packages/plotly-upset", editable = true }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["depictio*"]

# [tool.mypy]
# exclude = ["build/", "depictio/api/"]
# files = ["depictio/tests/", "depictio/models/", "depictio/cli/"]

[tool.ruff]
line-length = 100
exclude = ["dev/", "packages/", "scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I"] # Enable import sorting (I rules) - restored original
ignore = ["E501"]        # Ignore all line length errors

[tool.ruff.lint.isort]
known-first-party = ["depictio"]


[tool.ty.src]
# TEMPORARY (Phase A tooling bump): upgrading ty 0.0.1-alpha.12 -> 0.0.44 surfaced
# many new diagnostics that the old alpha never reported. The pre-commit `ty` hook
# was narrowed to `depictio/models/` (api/ and cli/ cleanup is deferred to a
# dedicated follow-up). The files below still carry error-level type-debt that
# needs real investigation rather than a mechanical fix — pydantic
# `ValidationError.from_exception_data` arg typing, union narrowing on a falsy
# `rules`, a possibly-real `DCImageConfig()` missing-argument call, and an
# unresolved `MVPDashboard` import. Excluded so the narrowed gate stays green;
# remove entries here as each file is cleaned up.
exclude = [
  "depictio/models/validation/ag_grid.py",
  "depictio/models/validation/dash_mantine.py",
  "depictio/models/validation/plotly_express.py",
  "depictio/models/yaml_serialization/validation.py",
  "depictio/models/models/data_collections.py",
]


[tool.mypy]
# Basic settings
python_version = "3.11"             # Adjust to your Python version
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = false

# Display settings - simpler output
show_error_context = false
show_column_numbers = true
error_summary = true
pretty = true

# Permissive settings
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = false
warn_no_return = false
warn_unreachable = false

# Per-module settings - only check specific directories
[[tool.mypy.overrides]]
module = ["depictio.models.*", "depictio.cli.*"]
check_untyped_defs = true


[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = [
  "depictio/tests/api",
  "depictio/tests/models",
  "depictio/tests/cli",
  "depictio/tests/unit",
]
markers = [
  "no_db: mark test to skip database setup",
  "integration: mark test as an integration test.",
  "playwright: mark test as a playwright test.",
  "docker: mark test as requiring docker.",
]
addopts = "-s"
filterwarnings = [
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
  "ignore::DeprecationWarning:pydantic.*",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
