[project]
name = "depictio-cli"
version = "0.0.6-beta3"
description = "Depictio CLI to interact with the Depictio API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "boto3",
  "colorlog",
  "httpx==0.28.1",
  "devtools",
  "polars[numpy,pandas,pyarrow,excel,deltalake]==1.22.0",
  "deltalake==0.24.0",
  "python-jose",
  "pyyaml",
  "typer",
  "click>=8.0.0,<8.2.0",
  "typeguard",
  "tomli",
  "rich",
  "pydantic[email]>=2.0.0",
  "pydantic-settings>=2.0.0",
  "beanie",
  "python-dotenv",
  "bleach",
  "packaging",
]
authors = [{ name = "Thomas Weber", email = "thomas.weber@embl.de" }]
urls = { Homepage = "http://github.com/depictio/depictio" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
lts-cpu = ["polars-lts-cpu"]

[project.scripts]
depictio-cli = "depictio.cli.depictio_cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Fix the package directory mapping
package-dir = {"" = "../.."}
packages = [
  "depictio.cli",
  "depictio.cli.cli",
  "depictio.cli.cli.commands",
  "depictio.cli.cli.utils",
  "depictio.models",
  "depictio.models.models",
  "depictio.models.models.data_collections_types",
  "depictio.api",
  "depictio.api.v1",
  "depictio.api.v1.configs",
]

# Add explicit package data if needed
[tool.setuptools.package-data]
"depictio.cli" = ["*.yaml", "*.yml", "*.json"]
