[project]
name = "depictio-cli"
version = "0.7.5"
description = "Depictio CLI to interact with the Depictio API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "boto3==1.36.21",
  "colorlog==6.9.0",
  "httpx==0.28.1",
  "devtools==0.12.2",
  "polars-lts-cpu[numpy,pandas,pyarrow,excel,deltalake]==1.19.0",
  "deltalake==0.24.0",
  "python-jose==3.3.0",
  "pyyaml==6.0.2",
  "typer==0.16.0",
  "click==8.2.0",
  # "typeguard",
  "tomli==2.2.1",
  "rich==14.2.0",
  "pydantic[email]==2.10.6",
  "pydantic-settings==2.7.1",
  "beanie==2.0.0",
  "python-dotenv==1.1.0",
  "bleach==6.2.0",
  "packaging==25.0",
]
authors = [{ name = "Thomas Weber", email = "thomas.weber@embl.de" }]
urls = { Homepage = "http://github.com/depictio/depictio" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
lts-cpu = ["polars-lts-cpu==1.19.0"]
multiqc = ["multiqc==1.31.0"]

[project.scripts]
depictio-cli = "depictio.cli.depictio_cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Fix the package directory mapping
package-dir = {"" = "../.."}
packages = [
  "depictio.cli",
  "depictio.cli.cli",
  "depictio.cli.cli.commands",
  "depictio.cli.cli.utils",
  "depictio.models",
  "depictio.models.models",
  "depictio.models.models.data_collections_types",
  "depictio.api",
  "depictio.api.v1",
  "depictio.api.v1.configs",
]

# Add explicit package data if needed
[tool.setuptools.package-data]
"depictio.cli" = ["*.yaml", "*.yml", "*.json"]
