[project]
name = "depictio-cli"
version = "1.1.1"
description = "Depictio CLI to interact with the Depictio API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  # Held at 1.36.21: the CLI has no s3fs/aiobotocore chain, so the root's
  # boto3==1.43.0 cap doesn't apply here — kept pinned to the current version.
  "boto3==1.36.21",
  "colorlog==6.10.1",
  "httpx==0.28.1",
  "devtools==0.12.2",
  # polars-lts-cpu is legacy; the modern LTS/older-CPU build is polars[rtcompat]
  # (-> polars-runtime-compat). rtcompat also matches multiqc 1.35's requirement.
  "polars[rtcompat,numpy,pandas,pyarrow,excel,deltalake]==1.41.2",
  "deltalake==1.6.0",
  "python-jose==3.5.0",
  "pyyaml>=6.0.2",
  "typer==0.26.7",
  # "typeguard",
  "tomli==2.2.1",
  "rich==15.0.0",
  "pydantic[email]==2.13.4",
  "pydantic-settings==2.14.1",
  # Held at 2.0.0: beanie 2.1.0 calls list_collection_names(authorizedCollections=
  # True) during init, which the latest mongomock (4.3.0) test double doesn't
  # accept, breaking the unit suite. Bump once mongomock supports the kwarg.
  "beanie==2.0.0",
  "python-dotenv==1.2.2",
  "bleach==6.4.0",
  # Required by catalog recipes that build colour scales / hierarchical figures
  # during processing (e.g. qiime2/taxonomy_heatmap.py imports plotly.colors).
  "plotly==6.8.0",
]
authors = [{ name = "Thomas Weber", email = "thomas.weber@embl.de" }]
urls = { Homepage = "http://github.com/depictio/depictio" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
multiqc = ["multiqc==1.35"]

[project.scripts]
depictio-cli = "depictio.cli.depictio_cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Fix the package directory mapping
package-dir = {"" = "../.."}
packages = [
  "depictio.cli",
  "depictio.cli.cli",
  "depictio.cli.cli.commands",
  "depictio.cli.cli.utils",
  "depictio.models",
  "depictio.models.models",
  "depictio.models.models.data_collections_types",
  "depictio.models.components",
  "depictio.models.components.advanced_viz",
  "depictio.api",
  "depictio.api.v1",
  "depictio.api.v1.configs",
  "depictio.recipes",
  # Catalog metadata + fixtures: load_catalog_entries() reads
  # depictio/catalog/**/*.yaml|*.tsv to match runs and render the gallery.
  "depictio.catalog",
]

# Add explicit package data if needed
[tool.setuptools.package-data]
"depictio.cli" = ["*.yaml", "*.yml", "*.json"]
"depictio.recipes" = ["**/*.py"]
# Ship the per-tool catalog fixtures/specs so wheel installs (not just
# editable) can resolve CATALOG_DIR contents.
"depictio.catalog" = ["**/*.yaml", "**/*.tsv", "**/*.txt", "**/*.json", "**/*.md", "**/*.py"]
