[project]
name = "bioinformatics-modules"
version = "0.1.0"
description = "Generic bioinformatics visualization modules for Depictio"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.0.0",
    "dash-mantine-components>=0.15.1",
    "dash-ag-grid>=31.0.0",
    "dash-iconify>=0.1.2",
    "plotly>=6.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
]
