[project]
name = "component-export-endpoint"
version = "0.1.0"
description = "Demo: export Depictio dashboard components via the render API"
requires-python = ">=3.10"
dependencies = [
    "ipykernel",
    "requests",
    "plotly",
    "pandas",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
